parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DEF

Grammar

Rule 0     S' -> S
Rule 1     S -> stmt S
Rule 2     S -> <empty>
Rule 3     exp -> LPAREN exp RPAREN
Rule 4     stmt -> PRINT exp COMMA exp SEMICOL
Rule 5     stmt -> PRINT exp SEMICOL
Rule 6     stmt -> PRINT LPAREN exp RPAREN SEMICOL
Rule 7     stmt -> VARTYPE NAME ASSIGN exp SEMICOL
Rule 8     stmt -> VARTYPE NAME ASSIGN stmt SEMICOL
Rule 9     stmt -> NAME ASSIGN exp SEMICOL
Rule 10    exp -> FLOAT
Rule 11    exp -> INT
Rule 12    exp -> BOOL
Rule 13    exp -> CHAR
Rule 14    stmt -> NAME INCREMENT SEMICOL
Rule 15    exp -> NAME LSQB INT RSQB
Rule 16    exp -> NAME POP LPAREN INT RPAREN
Rule 17    exp -> NAME INDEX LPAREN INT RPAREN
Rule 18    exp -> NAME SLICE LPAREN INT COMMA INT RPAREN
Rule 19    stmt -> NAME PUSH LPAREN exp RPAREN SEMICOL
Rule 20    exp -> NAME
Rule 21    exp -> exp PLUS exp
Rule 22    exp -> exp MINUS exp
Rule 23    exp -> exp MULTIPLICATION exp
Rule 24    exp -> exp DIVISION exp
Rule 25    exp -> exp MODULO exp
Rule 26    exp -> exp GREATERTHAN exp
Rule 27    exp -> exp LESSTHAN exp
Rule 28    exp -> exp GREATERTHANOREQUALTO exp
Rule 29    exp -> exp LESSTHANOREQUALTO exp
Rule 30    exp -> exp EQUALTO exp
Rule 31    exp -> exp NOTEQUALTO exp
Rule 32    exp -> exp COMMA exp
Rule 33    exp -> exp AND exp
Rule 34    exp -> exp OR exp
Rule 35    exp -> exp POW exp
Rule 36    exp -> exp DECREMENT
Rule 37    exp -> exp NOT
Rule 38    exp -> STRING
Rule 39    exp -> MINUS exp
Rule 40    stmt -> LIST NAME ASSIGN LSQB exp RSQB SEMICOL
Rule 41    stmt -> LIST NAME ASSIGN LSQB RSQB SEMICOL
Rule 42    stmt -> IF LPAREN exp RPAREN LCURLY S RCURLY block
Rule 43    block -> ELSEIF LPAREN exp RPAREN LCURLY S RCURLY block
Rule 44    block -> ELSE LCURLY S RCURLY
Rule 45    block -> <empty>
Rule 46    stmt -> DO LCURLY S RCURLY block_w
Rule 47    block_w -> WHILE LPAREN exp RPAREN SEMICOL

Terminals, with rules where they appear

AND                  : 33
ASSIGN               : 7 8 9 40 41
BOOL                 : 12
CHAR                 : 13
COMMA                : 4 18 32
DECREMENT            : 36
DEF                  : 
DIVISION             : 24
DO                   : 46
ELSE                 : 44
ELSEIF               : 43
EQUALTO              : 30
FLOAT                : 10
GREATERTHAN          : 26
GREATERTHANOREQUALTO : 28
IF                   : 42
INCREMENT            : 14
INDEX                : 17
INT                  : 11 15 16 17 18 18
LCURLY               : 42 43 44 46
LESSTHAN             : 27
LESSTHANOREQUALTO    : 29
LIST                 : 40 41
LPAREN               : 3 6 16 17 18 19 42 43 47
LSQB                 : 15 40 41
MINUS                : 22 39
MODULO               : 25
MULTIPLICATION       : 23
NAME                 : 7 8 9 14 15 16 17 18 19 20 40 41
NOT                  : 37
NOTEQUALTO           : 31
OR                   : 34
PLUS                 : 21
POP                  : 16
POW                  : 35
PRINT                : 4 5 6
PUSH                 : 19
RCURLY               : 42 43 44 46
RPAREN               : 3 6 16 17 18 19 42 43 47
RSQB                 : 15 40 41
SEMICOL              : 4 5 6 7 8 9 14 19 40 41 47
SLICE                : 18
STRING               : 38
VARTYPE              : 7 8
WHILE                : 47
error                : 

Nonterminals, with rules where they appear

S                    : 1 42 43 44 46 0
block                : 42 43
block_w              : 46
exp                  : 3 4 4 5 6 7 9 19 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 37 39 40 42 43 47
stmt                 : 1 8

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . stmt S
    (2) S -> .
    (4) stmt -> . PRINT exp COMMA exp SEMICOL
    (5) stmt -> . PRINT exp SEMICOL
    (6) stmt -> . PRINT LPAREN exp RPAREN SEMICOL
    (7) stmt -> . VARTYPE NAME ASSIGN exp SEMICOL
    (8) stmt -> . VARTYPE NAME ASSIGN stmt SEMICOL
    (9) stmt -> . NAME ASSIGN exp SEMICOL
    (14) stmt -> . NAME INCREMENT SEMICOL
    (19) stmt -> . NAME PUSH LPAREN exp RPAREN SEMICOL
    (40) stmt -> . LIST NAME ASSIGN LSQB exp RSQB SEMICOL
    (41) stmt -> . LIST NAME ASSIGN LSQB RSQB SEMICOL
    (42) stmt -> . IF LPAREN exp RPAREN LCURLY S RCURLY block
    (46) stmt -> . DO LCURLY S RCURLY block_w

    $end            reduce using rule 2 (S -> .)
    PRINT           shift and go to state 3
    VARTYPE         shift and go to state 4
    NAME            shift and go to state 5
    LIST            shift and go to state 6
    IF              shift and go to state 7
    DO              shift and go to state 8

    S                              shift and go to state 1
    stmt                           shift and go to state 2

state 1

    (0) S' -> S .



state 2

    (1) S -> stmt . S
    (1) S -> . stmt S
    (2) S -> .
    (4) stmt -> . PRINT exp COMMA exp SEMICOL
    (5) stmt -> . PRINT exp SEMICOL
    (6) stmt -> . PRINT LPAREN exp RPAREN SEMICOL
    (7) stmt -> . VARTYPE NAME ASSIGN exp SEMICOL
    (8) stmt -> . VARTYPE NAME ASSIGN stmt SEMICOL
    (9) stmt -> . NAME ASSIGN exp SEMICOL
    (14) stmt -> . NAME INCREMENT SEMICOL
    (19) stmt -> . NAME PUSH LPAREN exp RPAREN SEMICOL
    (40) stmt -> . LIST NAME ASSIGN LSQB exp RSQB SEMICOL
    (41) stmt -> . LIST NAME ASSIGN LSQB RSQB SEMICOL
    (42) stmt -> . IF LPAREN exp RPAREN LCURLY S RCURLY block
    (46) stmt -> . DO LCURLY S RCURLY block_w

    $end            reduce using rule 2 (S -> .)
    RCURLY          reduce using rule 2 (S -> .)
    PRINT           shift and go to state 3
    VARTYPE         shift and go to state 4
    NAME            shift and go to state 5
    LIST            shift and go to state 6
    IF              shift and go to state 7
    DO              shift and go to state 8

    stmt                           shift and go to state 2
    S                              shift and go to state 9

state 3

    (4) stmt -> PRINT . exp COMMA exp SEMICOL
    (5) stmt -> PRINT . exp SEMICOL
    (6) stmt -> PRINT . LPAREN exp RPAREN SEMICOL
    (3) exp -> . LPAREN exp RPAREN
    (10) exp -> . FLOAT
    (11) exp -> . INT
    (12) exp -> . BOOL
    (13) exp -> . CHAR
    (15) exp -> . NAME LSQB INT RSQB
    (16) exp -> . NAME POP LPAREN INT RPAREN
    (17) exp -> . NAME INDEX LPAREN INT RPAREN
    (18) exp -> . NAME SLICE LPAREN INT COMMA INT RPAREN
    (20) exp -> . NAME
    (21) exp -> . exp PLUS exp
    (22) exp -> . exp MINUS exp
    (23) exp -> . exp MULTIPLICATION exp
    (24) exp -> . exp DIVISION exp
    (25) exp -> . exp MODULO exp
    (26) exp -> . exp GREATERTHAN exp
    (27) exp -> . exp LESSTHAN exp
    (28) exp -> . exp GREATERTHANOREQUALTO exp
    (29) exp -> . exp LESSTHANOREQUALTO exp
    (30) exp -> . exp EQUALTO exp
    (31) exp -> . exp NOTEQUALTO exp
    (32) exp -> . exp COMMA exp
    (33) exp -> . exp AND exp
    (34) exp -> . exp OR exp
    (35) exp -> . exp POW exp
    (36) exp -> . exp DECREMENT
    (37) exp -> . exp NOT
    (38) exp -> . STRING
    (39) exp -> . MINUS exp

    LPAREN          shift and go to state 11
    FLOAT           shift and go to state 12
    INT             shift and go to state 13
    BOOL            shift and go to state 14
    CHAR            shift and go to state 15
    NAME            shift and go to state 16
    STRING          shift and go to state 18
    MINUS           shift and go to state 17

    exp                            shift and go to state 10

state 4

    (7) stmt -> VARTYPE . NAME ASSIGN exp SEMICOL
    (8) stmt -> VARTYPE . NAME ASSIGN stmt SEMICOL

    NAME            shift and go to state 19


state 5

    (9) stmt -> NAME . ASSIGN exp SEMICOL
    (14) stmt -> NAME . INCREMENT SEMICOL
    (19) stmt -> NAME . PUSH LPAREN exp RPAREN SEMICOL

    ASSIGN          shift and go to state 20
    INCREMENT       shift and go to state 21
    PUSH            shift and go to state 22


state 6

    (40) stmt -> LIST . NAME ASSIGN LSQB exp RSQB SEMICOL
    (41) stmt -> LIST . NAME ASSIGN LSQB RSQB SEMICOL

    NAME            shift and go to state 23


state 7

    (42) stmt -> IF . LPAREN exp RPAREN LCURLY S RCURLY block

    LPAREN          shift and go to state 24


state 8

    (46) stmt -> DO . LCURLY S RCURLY block_w

    LCURLY          shift and go to state 25


state 9

    (1) S -> stmt S .

    $end            reduce using rule 1 (S -> stmt S .)
    RCURLY          reduce using rule 1 (S -> stmt S .)


state 10

    (4) stmt -> PRINT exp . COMMA exp SEMICOL
    (5) stmt -> PRINT exp . SEMICOL
    (21) exp -> exp . PLUS exp
    (22) exp -> exp . MINUS exp
    (23) exp -> exp . MULTIPLICATION exp
    (24) exp -> exp . DIVISION exp
    (25) exp -> exp . MODULO exp
    (26) exp -> exp . GREATERTHAN exp
    (27) exp -> exp . LESSTHAN exp
    (28) exp -> exp . GREATERTHANOREQUALTO exp
    (29) exp -> exp . LESSTHANOREQUALTO exp
    (30) exp -> exp . EQUALTO exp
    (31) exp -> exp . NOTEQUALTO exp
    (32) exp -> exp . COMMA exp
    (33) exp -> exp . AND exp
    (34) exp -> exp . OR exp
    (35) exp -> exp . POW exp
    (36) exp -> exp . DECREMENT
    (37) exp -> exp . NOT

    COMMA           shift and go to state 26
    SEMICOL         shift and go to state 27
    PLUS            shift and go to state 28
    MINUS           shift and go to state 29
    MULTIPLICATION  shift and go to state 30
    DIVISION        shift and go to state 31
    MODULO          shift and go to state 32
    GREATERTHAN     shift and go to state 33
    LESSTHAN        shift and go to state 34
    GREATERTHANOREQUALTO shift and go to state 35
    LESSTHANOREQUALTO shift and go to state 36
    EQUALTO         shift and go to state 37
    NOTEQUALTO      shift and go to state 38
    AND             shift and go to state 39
    OR              shift and go to state 40
    POW             shift and go to state 41
    DECREMENT       shift and go to state 42
    NOT             shift and go to state 43


state 11

    (6) stmt -> PRINT LPAREN . exp RPAREN SEMICOL
    (3) exp -> LPAREN . exp RPAREN
    (3) exp -> . LPAREN exp RPAREN
    (10) exp -> . FLOAT
    (11) exp -> . INT
    (12) exp -> . BOOL
    (13) exp -> . CHAR
    (15) exp -> . NAME LSQB INT RSQB
    (16) exp -> . NAME POP LPAREN INT RPAREN
    (17) exp -> . NAME INDEX LPAREN INT RPAREN
    (18) exp -> . NAME SLICE LPAREN INT COMMA INT RPAREN
    (20) exp -> . NAME
    (21) exp -> . exp PLUS exp
    (22) exp -> . exp MINUS exp
    (23) exp -> . exp MULTIPLICATION exp
    (24) exp -> . exp DIVISION exp
    (25) exp -> . exp MODULO exp
    (26) exp -> . exp GREATERTHAN exp
    (27) exp -> . exp LESSTHAN exp
    (28) exp -> . exp GREATERTHANOREQUALTO exp
    (29) exp -> . exp LESSTHANOREQUALTO exp
    (30) exp -> . exp EQUALTO exp
    (31) exp -> . exp NOTEQUALTO exp
    (32) exp -> . exp COMMA exp
    (33) exp -> . exp AND exp
    (34) exp -> . exp OR exp
    (35) exp -> . exp POW exp
    (36) exp -> . exp DECREMENT
    (37) exp -> . exp NOT
    (38) exp -> . STRING
    (39) exp -> . MINUS exp

    LPAREN          shift and go to state 44
    FLOAT           shift and go to state 12
    INT             shift and go to state 13
    BOOL            shift and go to state 14
    CHAR            shift and go to state 15
    NAME            shift and go to state 16
    STRING          shift and go to state 18
    MINUS           shift and go to state 17

    exp                            shift and go to state 45

state 12

    (10) exp -> FLOAT .

    COMMA           reduce using rule 10 (exp -> FLOAT .)
    SEMICOL         reduce using rule 10 (exp -> FLOAT .)
    PLUS            reduce using rule 10 (exp -> FLOAT .)
    MINUS           reduce using rule 10 (exp -> FLOAT .)
    MULTIPLICATION  reduce using rule 10 (exp -> FLOAT .)
    DIVISION        reduce using rule 10 (exp -> FLOAT .)
    MODULO          reduce using rule 10 (exp -> FLOAT .)
    GREATERTHAN     reduce using rule 10 (exp -> FLOAT .)
    LESSTHAN        reduce using rule 10 (exp -> FLOAT .)
    GREATERTHANOREQUALTO reduce using rule 10 (exp -> FLOAT .)
    LESSTHANOREQUALTO reduce using rule 10 (exp -> FLOAT .)
    EQUALTO         reduce using rule 10 (exp -> FLOAT .)
    NOTEQUALTO      reduce using rule 10 (exp -> FLOAT .)
    AND             reduce using rule 10 (exp -> FLOAT .)
    OR              reduce using rule 10 (exp -> FLOAT .)
    POW             reduce using rule 10 (exp -> FLOAT .)
    DECREMENT       reduce using rule 10 (exp -> FLOAT .)
    NOT             reduce using rule 10 (exp -> FLOAT .)
    RPAREN          reduce using rule 10 (exp -> FLOAT .)
    RSQB            reduce using rule 10 (exp -> FLOAT .)


state 13

    (11) exp -> INT .

    COMMA           reduce using rule 11 (exp -> INT .)
    SEMICOL         reduce using rule 11 (exp -> INT .)
    PLUS            reduce using rule 11 (exp -> INT .)
    MINUS           reduce using rule 11 (exp -> INT .)
    MULTIPLICATION  reduce using rule 11 (exp -> INT .)
    DIVISION        reduce using rule 11 (exp -> INT .)
    MODULO          reduce using rule 11 (exp -> INT .)
    GREATERTHAN     reduce using rule 11 (exp -> INT .)
    LESSTHAN        reduce using rule 11 (exp -> INT .)
    GREATERTHANOREQUALTO reduce using rule 11 (exp -> INT .)
    LESSTHANOREQUALTO reduce using rule 11 (exp -> INT .)
    EQUALTO         reduce using rule 11 (exp -> INT .)
    NOTEQUALTO      reduce using rule 11 (exp -> INT .)
    AND             reduce using rule 11 (exp -> INT .)
    OR              reduce using rule 11 (exp -> INT .)
    POW             reduce using rule 11 (exp -> INT .)
    DECREMENT       reduce using rule 11 (exp -> INT .)
    NOT             reduce using rule 11 (exp -> INT .)
    RPAREN          reduce using rule 11 (exp -> INT .)
    RSQB            reduce using rule 11 (exp -> INT .)


state 14

    (12) exp -> BOOL .

    COMMA           reduce using rule 12 (exp -> BOOL .)
    SEMICOL         reduce using rule 12 (exp -> BOOL .)
    PLUS            reduce using rule 12 (exp -> BOOL .)
    MINUS           reduce using rule 12 (exp -> BOOL .)
    MULTIPLICATION  reduce using rule 12 (exp -> BOOL .)
    DIVISION        reduce using rule 12 (exp -> BOOL .)
    MODULO          reduce using rule 12 (exp -> BOOL .)
    GREATERTHAN     reduce using rule 12 (exp -> BOOL .)
    LESSTHAN        reduce using rule 12 (exp -> BOOL .)
    GREATERTHANOREQUALTO reduce using rule 12 (exp -> BOOL .)
    LESSTHANOREQUALTO reduce using rule 12 (exp -> BOOL .)
    EQUALTO         reduce using rule 12 (exp -> BOOL .)
    NOTEQUALTO      reduce using rule 12 (exp -> BOOL .)
    AND             reduce using rule 12 (exp -> BOOL .)
    OR              reduce using rule 12 (exp -> BOOL .)
    POW             reduce using rule 12 (exp -> BOOL .)
    DECREMENT       reduce using rule 12 (exp -> BOOL .)
    NOT             reduce using rule 12 (exp -> BOOL .)
    RPAREN          reduce using rule 12 (exp -> BOOL .)
    RSQB            reduce using rule 12 (exp -> BOOL .)


state 15

    (13) exp -> CHAR .

    COMMA           reduce using rule 13 (exp -> CHAR .)
    SEMICOL         reduce using rule 13 (exp -> CHAR .)
    PLUS            reduce using rule 13 (exp -> CHAR .)
    MINUS           reduce using rule 13 (exp -> CHAR .)
    MULTIPLICATION  reduce using rule 13 (exp -> CHAR .)
    DIVISION        reduce using rule 13 (exp -> CHAR .)
    MODULO          reduce using rule 13 (exp -> CHAR .)
    GREATERTHAN     reduce using rule 13 (exp -> CHAR .)
    LESSTHAN        reduce using rule 13 (exp -> CHAR .)
    GREATERTHANOREQUALTO reduce using rule 13 (exp -> CHAR .)
    LESSTHANOREQUALTO reduce using rule 13 (exp -> CHAR .)
    EQUALTO         reduce using rule 13 (exp -> CHAR .)
    NOTEQUALTO      reduce using rule 13 (exp -> CHAR .)
    AND             reduce using rule 13 (exp -> CHAR .)
    OR              reduce using rule 13 (exp -> CHAR .)
    POW             reduce using rule 13 (exp -> CHAR .)
    DECREMENT       reduce using rule 13 (exp -> CHAR .)
    NOT             reduce using rule 13 (exp -> CHAR .)
    RPAREN          reduce using rule 13 (exp -> CHAR .)
    RSQB            reduce using rule 13 (exp -> CHAR .)


state 16

    (15) exp -> NAME . LSQB INT RSQB
    (16) exp -> NAME . POP LPAREN INT RPAREN
    (17) exp -> NAME . INDEX LPAREN INT RPAREN
    (18) exp -> NAME . SLICE LPAREN INT COMMA INT RPAREN
    (20) exp -> NAME .

    LSQB            shift and go to state 46
    POP             shift and go to state 47
    INDEX           shift and go to state 48
    SLICE           shift and go to state 49
    COMMA           reduce using rule 20 (exp -> NAME .)
    SEMICOL         reduce using rule 20 (exp -> NAME .)
    PLUS            reduce using rule 20 (exp -> NAME .)
    MINUS           reduce using rule 20 (exp -> NAME .)
    MULTIPLICATION  reduce using rule 20 (exp -> NAME .)
    DIVISION        reduce using rule 20 (exp -> NAME .)
    MODULO          reduce using rule 20 (exp -> NAME .)
    GREATERTHAN     reduce using rule 20 (exp -> NAME .)
    LESSTHAN        reduce using rule 20 (exp -> NAME .)
    GREATERTHANOREQUALTO reduce using rule 20 (exp -> NAME .)
    LESSTHANOREQUALTO reduce using rule 20 (exp -> NAME .)
    EQUALTO         reduce using rule 20 (exp -> NAME .)
    NOTEQUALTO      reduce using rule 20 (exp -> NAME .)
    AND             reduce using rule 20 (exp -> NAME .)
    OR              reduce using rule 20 (exp -> NAME .)
    POW             reduce using rule 20 (exp -> NAME .)
    DECREMENT       reduce using rule 20 (exp -> NAME .)
    NOT             reduce using rule 20 (exp -> NAME .)
    RPAREN          reduce using rule 20 (exp -> NAME .)
    RSQB            reduce using rule 20 (exp -> NAME .)


state 17

    (39) exp -> MINUS . exp
    (3) exp -> . LPAREN exp RPAREN
    (10) exp -> . FLOAT
    (11) exp -> . INT
    (12) exp -> . BOOL
    (13) exp -> . CHAR
    (15) exp -> . NAME LSQB INT RSQB
    (16) exp -> . NAME POP LPAREN INT RPAREN
    (17) exp -> . NAME INDEX LPAREN INT RPAREN
    (18) exp -> . NAME SLICE LPAREN INT COMMA INT RPAREN
    (20) exp -> . NAME
    (21) exp -> . exp PLUS exp
    (22) exp -> . exp MINUS exp
    (23) exp -> . exp MULTIPLICATION exp
    (24) exp -> . exp DIVISION exp
    (25) exp -> . exp MODULO exp
    (26) exp -> . exp GREATERTHAN exp
    (27) exp -> . exp LESSTHAN exp
    (28) exp -> . exp GREATERTHANOREQUALTO exp
    (29) exp -> . exp LESSTHANOREQUALTO exp
    (30) exp -> . exp EQUALTO exp
    (31) exp -> . exp NOTEQUALTO exp
    (32) exp -> . exp COMMA exp
    (33) exp -> . exp AND exp
    (34) exp -> . exp OR exp
    (35) exp -> . exp POW exp
    (36) exp -> . exp DECREMENT
    (37) exp -> . exp NOT
    (38) exp -> . STRING
    (39) exp -> . MINUS exp

    LPAREN          shift and go to state 44
    FLOAT           shift and go to state 12
    INT             shift and go to state 13
    BOOL            shift and go to state 14
    CHAR            shift and go to state 15
    NAME            shift and go to state 16
    STRING          shift and go to state 18
    MINUS           shift and go to state 17

    exp                            shift and go to state 50

state 18

    (38) exp -> STRING .

    COMMA           reduce using rule 38 (exp -> STRING .)
    SEMICOL         reduce using rule 38 (exp -> STRING .)
    PLUS            reduce using rule 38 (exp -> STRING .)
    MINUS           reduce using rule 38 (exp -> STRING .)
    MULTIPLICATION  reduce using rule 38 (exp -> STRING .)
    DIVISION        reduce using rule 38 (exp -> STRING .)
    MODULO          reduce using rule 38 (exp -> STRING .)
    GREATERTHAN     reduce using rule 38 (exp -> STRING .)
    LESSTHAN        reduce using rule 38 (exp -> STRING .)
    GREATERTHANOREQUALTO reduce using rule 38 (exp -> STRING .)
    LESSTHANOREQUALTO reduce using rule 38 (exp -> STRING .)
    EQUALTO         reduce using rule 38 (exp -> STRING .)
    NOTEQUALTO      reduce using rule 38 (exp -> STRING .)
    AND             reduce using rule 38 (exp -> STRING .)
    OR              reduce using rule 38 (exp -> STRING .)
    POW             reduce using rule 38 (exp -> STRING .)
    DECREMENT       reduce using rule 38 (exp -> STRING .)
    NOT             reduce using rule 38 (exp -> STRING .)
    RPAREN          reduce using rule 38 (exp -> STRING .)
    RSQB            reduce using rule 38 (exp -> STRING .)


state 19

    (7) stmt -> VARTYPE NAME . ASSIGN exp SEMICOL
    (8) stmt -> VARTYPE NAME . ASSIGN stmt SEMICOL

    ASSIGN          shift and go to state 51


state 20

    (9) stmt -> NAME ASSIGN . exp SEMICOL
    (3) exp -> . LPAREN exp RPAREN
    (10) exp -> . FLOAT
    (11) exp -> . INT
    (12) exp -> . BOOL
    (13) exp -> . CHAR
    (15) exp -> . NAME LSQB INT RSQB
    (16) exp -> . NAME POP LPAREN INT RPAREN
    (17) exp -> . NAME INDEX LPAREN INT RPAREN
    (18) exp -> . NAME SLICE LPAREN INT COMMA INT RPAREN
    (20) exp -> . NAME
    (21) exp -> . exp PLUS exp
    (22) exp -> . exp MINUS exp
    (23) exp -> . exp MULTIPLICATION exp
    (24) exp -> . exp DIVISION exp
    (25) exp -> . exp MODULO exp
    (26) exp -> . exp GREATERTHAN exp
    (27) exp -> . exp LESSTHAN exp
    (28) exp -> . exp GREATERTHANOREQUALTO exp
    (29) exp -> . exp LESSTHANOREQUALTO exp
    (30) exp -> . exp EQUALTO exp
    (31) exp -> . exp NOTEQUALTO exp
    (32) exp -> . exp COMMA exp
    (33) exp -> . exp AND exp
    (34) exp -> . exp OR exp
    (35) exp -> . exp POW exp
    (36) exp -> . exp DECREMENT
    (37) exp -> . exp NOT
    (38) exp -> . STRING
    (39) exp -> . MINUS exp

    LPAREN          shift and go to state 44
    FLOAT           shift and go to state 12
    INT             shift and go to state 13
    BOOL            shift and go to state 14
    CHAR            shift and go to state 15
    NAME            shift and go to state 16
    STRING          shift and go to state 18
    MINUS           shift and go to state 17

    exp                            shift and go to state 52

state 21

    (14) stmt -> NAME INCREMENT . SEMICOL

    SEMICOL         shift and go to state 53


state 22

    (19) stmt -> NAME PUSH . LPAREN exp RPAREN SEMICOL

    LPAREN          shift and go to state 54


state 23

    (40) stmt -> LIST NAME . ASSIGN LSQB exp RSQB SEMICOL
    (41) stmt -> LIST NAME . ASSIGN LSQB RSQB SEMICOL

    ASSIGN          shift and go to state 55


state 24

    (42) stmt -> IF LPAREN . exp RPAREN LCURLY S RCURLY block
    (3) exp -> . LPAREN exp RPAREN
    (10) exp -> . FLOAT
    (11) exp -> . INT
    (12) exp -> . BOOL
    (13) exp -> . CHAR
    (15) exp -> . NAME LSQB INT RSQB
    (16) exp -> . NAME POP LPAREN INT RPAREN
    (17) exp -> . NAME INDEX LPAREN INT RPAREN
    (18) exp -> . NAME SLICE LPAREN INT COMMA INT RPAREN
    (20) exp -> . NAME
    (21) exp -> . exp PLUS exp
    (22) exp -> . exp MINUS exp
    (23) exp -> . exp MULTIPLICATION exp
    (24) exp -> . exp DIVISION exp
    (25) exp -> . exp MODULO exp
    (26) exp -> . exp GREATERTHAN exp
    (27) exp -> . exp LESSTHAN exp
    (28) exp -> . exp GREATERTHANOREQUALTO exp
    (29) exp -> . exp LESSTHANOREQUALTO exp
    (30) exp -> . exp EQUALTO exp
    (31) exp -> . exp NOTEQUALTO exp
    (32) exp -> . exp COMMA exp
    (33) exp -> . exp AND exp
    (34) exp -> . exp OR exp
    (35) exp -> . exp POW exp
    (36) exp -> . exp DECREMENT
    (37) exp -> . exp NOT
    (38) exp -> . STRING
    (39) exp -> . MINUS exp

    LPAREN          shift and go to state 44
    FLOAT           shift and go to state 12
    INT             shift and go to state 13
    BOOL            shift and go to state 14
    CHAR            shift and go to state 15
    NAME            shift and go to state 16
    STRING          shift and go to state 18
    MINUS           shift and go to state 17

    exp                            shift and go to state 56

state 25

    (46) stmt -> DO LCURLY . S RCURLY block_w
    (1) S -> . stmt S
    (2) S -> .
    (4) stmt -> . PRINT exp COMMA exp SEMICOL
    (5) stmt -> . PRINT exp SEMICOL
    (6) stmt -> . PRINT LPAREN exp RPAREN SEMICOL
    (7) stmt -> . VARTYPE NAME ASSIGN exp SEMICOL
    (8) stmt -> . VARTYPE NAME ASSIGN stmt SEMICOL
    (9) stmt -> . NAME ASSIGN exp SEMICOL
    (14) stmt -> . NAME INCREMENT SEMICOL
    (19) stmt -> . NAME PUSH LPAREN exp RPAREN SEMICOL
    (40) stmt -> . LIST NAME ASSIGN LSQB exp RSQB SEMICOL
    (41) stmt -> . LIST NAME ASSIGN LSQB RSQB SEMICOL
    (42) stmt -> . IF LPAREN exp RPAREN LCURLY S RCURLY block
    (46) stmt -> . DO LCURLY S RCURLY block_w
